Updated to Moonraker/Mainsail

--- a/printer.cfg
+++ b/printer.cfg
@@ -121,6 +121,7 @@ screw4_name: back left screw
 screw_thread: CW-M3
 
 [include macros.cfg]
+[include mainsail.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
