Added power control. I think.

--- a/printer.cfg
+++ b/printer.cfg
@@ -109,6 +109,16 @@ fade_start: 1.0
 fade_end: 10.0
 algorithm: bicubic
 
+[firmware_retraction]
+retract_length: 1.0
+retract_speed: 20
+#unretract_extra_length: 0
+#unretract_speed: 10
+
+[gcode_arcs]
+resolution: 1.0
+
+
 [screws_tilt_adjust]
 screw1: 23, 45
 screw1_name: front left screw
@@ -119,6 +129,19 @@ screw3_name: back right screw
 screw4: 23,198
 screw4_name: back left screw
 screw_thread: CW-M3
+
+[delayed_gcode delayed_printer_off]
+initial_duration: 0.
+gcode:
+   {% if printer.idle_timeout.state == "Idle" %}
+      POWER_OFF_PRINTER
+   {% endif %}
+
+[idle_timeout]
+gcode:
+   TURN_OFF_MOTORS
+   TURN_OFF_HEATERS
+   UPDATE_DELAYED_GCODE ID=delayed_printer_off DURATION=60
 
 [include macros.cfg]
 [include mainsail.cfg]
