--- a/macros.cfg
+++ b/macros.cfg
@@ -6,21 +6,25 @@ gcode:
     BED_MESH_PROFILE LOAD={BED_TEMP}
     # Set and wait for bed to reach temperature
     M190 S{BED_TEMP}
+    # Pre-heat extruder to 160
+    M104 S160
     # Use absolute coordinates
     G90
     # Set GCODE offset
     SET_GCODE_OFFSET Z=0.0
     # Home
     G28
-    # Set nozzle temperature
-    M104 S{EXTRUDER_TEMP}
     # Move Z up
     G1 Z10.0 F3000
     # Wait for nozzle to reach temperature
-    M109 S{EXTRUDER_TEMP}
-    # Reset extruder
-    G92 E0
+    M104 S{EXTRUDER_TEMP}
+    # Move Z axis up a little to prevcent scratching heat bed
+    G1 Z2.0 F3000
     # Move to start-line position
+    G1 X0.1 Y20 Z2.0 F5000.0
+    # Wait for Extruder temperature
+    M109 S{EXTRUDER_TEMP}
+    # Move to start for purge line
     G1 X0.1 Y20 Z0.3 F5000.0
     # Draw 1st line
     G1 X0.1 Y100.0 Z0.3 F1500.0 E15
@@ -80,3 +84,10 @@ gcode:
    G91
    G1 E-50 F1000
    RESTORE_GCODE_STATE NAME=M600_state
+
+
+# Turn printer off
+
+[gcode_macro POWER_OFF_PRINTER]
+gcode:
+   {action_call_remote_method("set_device_power", device="printer", state="off")}
