Added Raspberry Pi as second MCU

--- a/printer.cfg
+++ b/printer.cfg
@@ -73,6 +73,9 @@ pin: PE3
 [mcu]
 serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
 
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
 [printer]
 kinematics: cartesian
 max_velocity: 300
@@ -117,7 +120,6 @@ retract_speed: 20
 
 [gcode_arcs]
 resolution: 1.0
-
 
 [screws_tilt_adjust]
 screw1: 23, 45
