Re-added OctoPrint compatibility after moonraker update

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -26,6 +26,8 @@ type: web
 repo: meteyou/mainsail
 path: ~/mainsail
 
+[octoprint_compat]
+
 [power printer]
 type: tasmota
 locked_while_printing: true
