--- a/macros.cfg
+++ b/macros.cfg
@@ -1,3 +1,7 @@
+[gcode_macro LEVEL_BED]
+gcode:
+    SCREWS_TILT_CALCULATE
+
 [gcode_macro START_PRINT]
 default_parameter_BED_TEMP: 40 
 default_parameter_EXTRUDER_TEMP: 200
