Added accelerometer config

--- a/printer.cfg
+++ b/printer.cfg
@@ -83,6 +83,13 @@ max_accel: 800
 max_z_velocity: 5
 max_z_accel: 100
 
+[adxl345]
+cs_pin: rpi:None
+
+[resonance_tester]
+accel_chip: adxl345
+probe_points: 123,145,20
+
 [bltouch]
 sensor_pin: ^PA3 
 control_pin: PG1
