--- a/printer.cfg
+++ b/printer.cfg
@@ -79,9 +79,19 @@ serial: /tmp/klipper_host_mcu
 [printer]
 kinematics: cartesian
 max_velocity: 300
-max_accel: 800
+max_accel: 3000
 max_z_velocity: 5
 max_z_accel: 100
+# max_accel: 7000
+# max_accel_to_decel: 7000
+max_z_accel: 100
+square_corner_velocity: 5
+
+# [input_shaper]
+# shaper_freq_x: 75.8
+# shaper_type_x: 3hump_ei
+# shaper_freq_y: 45.6
+# shaper_type_y: 2hump_ei
 
 [adxl345]
 cs_pin: rpi:None
@@ -95,7 +105,7 @@ sensor_pin: ^PA3
 control_pin: PG1
 x_offset: -23 
 y_offset: -47
-z_offset: 1.17
+#z_offset: 1.17
 speed: 2
 
 [temperature_sensor chamber]
@@ -105,6 +115,35 @@ sensor_mcu: rpi
 
 [temperature_sensor pi]
 sensor_type: temperature_host
+
+[filament_switch_sensor filament_sensor]
+pause_on_runout: False
+#   When set to True, a PAUSE will execute immediately after a runout
+#   is detected. Note that if pause_on_runout is False and the
+#   runout_gcode is omitted then runout detection is disabled. Default
+#   is True.
+#runout_gcode: M600
+#   A list of G-Code commands to execute after a filament runout is
+#   detected. See docs/Command_Templates.md for G-Code format. If
+#   pause_on_runout is set to True this G-Code will run after the
+#   PAUSE is complete. The default is not to run any G-Code commands.
+#insert_gcode:
+#   A list of G-Code commands to execute after a filament insert is
+#   detected. See docs/Command_Templates.md for G-Code format. The
+#   default is not to run any G-Code commands, which disables insert
+#   detection.
+#event_delay: 3.0
+#   The minimum amount of time in seconds to delay between events.
+#   Events triggered during this time period will be silently
+#   ignored. The default is 3 seconds.
+#pause_delay: 0.5
+#   The amount of time to delay, in seconds, between the pause command
+#   dispatch and execution of the runout_gcode. It may be useful to
+#   increase this delay if OctoPrint exhibits strange pause behavior.
+#   Default is 0.5 seconds.
+switch_pin: ^!PA1
+#   The pin on which the switch is connected. This parameter must be
+#   provided.
 
 [safe_z_home]
 home_xy_position: 123,145
@@ -271,3 +310,6 @@ gcode:
 #*# max_y = 152.96
 #*# mesh_x_pps = 2
 #*# max_x = 176.96
+#*#
+#*# [bltouch]
+#*# z_offset = 1.357
