--- a/printer.cfg
+++ b/printer.cfg
@@ -11,7 +11,8 @@
 step_pin: PF7
 dir_pin: !PK0
 enable_pin: !PF6
-step_distance: .0125
+microsteps: 16
+rotation_distance: 40
 endstop_pin: ^!PF0
 position_endstop: 0
 position_max: 200
@@ -21,7 +22,8 @@ homing_speed: 30.0
 step_pin: PK2
 dir_pin: !PK3
 enable_pin: !PK1
-step_distance: .0125
+microsteps: 16
+rotation_distance: 40
 endstop_pin: ^!PA2
 position_endstop: 0
 position_max: 200
@@ -31,7 +33,8 @@ homing_speed: 30.0
 step_pin: PK5
 dir_pin: PK7
 enable_pin: !PK4
-step_distance: .0025
+microsteps: 16
+rotation_distance: 8
 #endstop_pin: ^!PA1
 #position_endstop: 0.5
 position_min: -2
@@ -42,7 +45,8 @@ endstop_pin: probe:z_virtual_endstop
 step_pin: PF4
 dir_pin: PF5
 enable_pin: !PF3
-step_distance: 0.00989615
+microsteps: 16
+rotation_distance: 30.4009728
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PG5
