Added capability to heat faux chamber with bed heater

--- a/macros.cfg
+++ b/macros.cfg
@@ -5,11 +5,16 @@ gcode:
 [gcode_macro START_PRINT]
 default_parameter_BED_TEMP: 40 
 default_parameter_EXTRUDER_TEMP: 200
+default_parameter_CHAMBER_TEMP: 0
 gcode:
     # Load bed mesh
     BED_MESH_PROFILE LOAD={BED_TEMP}
     # Set and wait for bed to reach temperature
+    M117 Waiting on bed
     M190 S{BED_TEMP}
+    # Wait for chamber temperature
+    M117 Waiting on chamber
+    TEMPERATURE_WAIT SENSOR="temperature_sensor chamber" MINIMUM={CHAMBER_TEMP}
     # Pre-heat extruder to 160
     M104 S160
     # Use absolute coordinates
@@ -21,6 +26,7 @@ gcode:
     # Move Z up
     G1 Z10.0 F3000
     # Wait for nozzle to reach temperature
+    M117 Waiting on nozzle
     M104 S{EXTRUDER_TEMP}
     # Move Z axis up a little to prevcent scratching heat bed
     G1 Z2.0 F3000
