--- a/macros.cfg
+++ b/macros.cfg
@@ -2,6 +2,11 @@
 gcode:
     SCREWS_TILT_CALCULATE
 
+[gcode_macro GANTRY_LEVEL]
+gcode:
+    G1 X100 Y200 Z50 F1500
+    M84
+
 [gcode_macro START_PRINT]
 default_parameter_BED_TEMP: 40 
 default_parameter_EXTRUDER_TEMP: 200
@@ -22,6 +27,7 @@ gcode:
     # Set GCODE offset
     SET_GCODE_OFFSET Z=0.0
     # Home
+    M117 Homing
     G28
     # Move Z up
     G1 Z10.0 F3000
@@ -31,21 +37,19 @@ gcode:
     # Move Z axis up a little to prevcent scratching heat bed
     G1 Z2.0 F3000
     # Move to start-line position
-    G1 X0.1 Y20 Z2.0 F5000.0
+    G1 X20 Y0.1 Z5.0 F5000.0
     # Wait for Extruder temperature
     M109 S{EXTRUDER_TEMP}
+    M117 Purging
     # Move to start for purge line
-    G1 X0.1 Y20 Z0.3 F5000.0
+    G1 X20 Y0.1 Z0.2 F5000.0
     # Draw 1st line
-    G1 X0.1 Y100.0 Z0.3 F1500.0 E15
-    # Move to side a little
-    G1 X0.4 Y100.0 Z0.3 F5000.0
-    # Draw 2nd line
-    G1 X0.4 Y20 Z0.3 F1500.0 E30
+    G1 X199.9 Y0.1 Z0.2 F1500.0 E30
     # Reset extruder
     G92 E0
     # Move Z up a little
     G1 Z5.0 F3000
+    M117 Printing
 
 [gcode_macro END_PRINT]
 gcode:
@@ -65,6 +69,7 @@ gcode:
     M84
     # Clear bed mesh
     BED_MESH_CLEAR
+    M117 Print complete
 
 ######################################################################
 # Filament Change
