Update macros for new klipper format
Signed-off-by: Matthias Liffers <m@tthi.as>

--- a/macros.cfg
+++ b/macros.cfg
@@ -8,24 +8,24 @@ gcode:
     M84
 
 [gcode_macro START_PRINT]
-default_parameter_BED_TEMP: 40 
-default_parameter_EXTRUDER_TEMP: 200
-default_parameter_CHAMBER_TEMP: 0
 gcode:
+    # Load variables
+    {% set bed_temp = params.BED_TEMP|default(40)|int %}
+    {% set extruder_temp = params.EXTRUDER_TEMP|default(200)|int %}
+    {% set chamber_temp = params.CHAMBER_TEMP|default(0)|int %}
     # Load bed mesh
-    BED_MESH_PROFILE LOAD={BED_TEMP}
-    # Set and wait for bed to reach temperature
+    BED_MESH_PROFILE LOAD={bed_temp}    # Set and wait for bed to reach temperature
     M117 Waiting on bed
-    M190 S{BED_TEMP}
+    M190 S{bed_temp}
     # Wait for chamber temperature
     M117 Waiting on chamber
-    TEMPERATURE_WAIT SENSOR="temperature_sensor chamber" MINIMUM={CHAMBER_TEMP}
+    TEMPERATURE_WAIT SENSOR="temperature_sensor chamber" MINIMUM={chamber_temp}
     # Pre-heat extruder to 160
     M104 S160
     # Use absolute coordinates
     G90
     # Set GCODE offset
-    SET_GCODE_OFFSET Z=0.0
+    # SET_GCODE_OFFSET Z=0.0
     # Home
     M117 Homing
     G28
@@ -33,13 +33,13 @@ gcode:
     G1 Z10.0 F3000
     # Wait for nozzle to reach temperature
     M117 Waiting on nozzle
-    M104 S{EXTRUDER_TEMP}
+    M104 S{extruder_temp}
     # Move Z axis up a little to prevcent scratching heat bed
     G1 Z2.0 F3000
     # Move to start-line position
     G1 X20 Y0.1 Z5.0 F5000.0
     # Wait for Extruder temperature
-    M109 S{EXTRUDER_TEMP}
+    M109 S{extruder_temp}
     M117 Purging
     # Move to start for purge line
     G1 X20 Y0.1 Z0.2 F5000.0
@@ -69,6 +69,8 @@ gcode:
     M84
     # Clear bed mesh
     BED_MESH_CLEAR
+    # Turn off gcode offset
+    SET_GCODE_OFFSET Z=0
     M117 Print complete
 
 ######################################################################
@@ -84,11 +86,11 @@ gcode:
 [pause_resume]
 
 [gcode_macro M600]
-default_parameter_X: 50
-default_parameter_Y: 0
-default_parameter_Z: 10
 
 gcode:
+   {% set x = params.X|default(50)|int %}
+   {% set y = params.X|default(0)|int %}
+   {% set z = params.X|default(10)|int %}
    SAVE_GCODE_STATE NAME=M600_state
    PAUSE
    G91
