--- a/moonraker.conf
+++ b/moonraker.conf
@@ -2,9 +2,9 @@
 host: 0.0.0.0
 port: 7125
 enable_debug_logging: True
-config_path: ~/klipper_config
 
 [authorization]
+# enabled: True
 cors_domains:
     https://my.mainsail.xyz
     http://my.mainsail.xyz
@@ -17,6 +17,13 @@ trusted_clients:
  192.168.0.0/16
  FE80::/10
  ::1/128
+
+[file_manager]
+queue_gcode_uploads: True
+config_path: ~/klipper_config
+
+[job_queue]
+load_on_startup: True
 
 [update_manager]
 
@@ -33,3 +40,5 @@ locked_while_printing: true
 restart_klipper_when_powered: true
 restart_delay: 5
 address: 192.168.1.121
+on_when_upload_queued: True
+bound_service: klipper
