--- a/moonraker.conf
+++ b/moonraker.conf
@@ -15,12 +15,15 @@ trusted_clients:
  169.254.0.0/16
  172.16.0.0/12
  192.168.0.0/16
+ 192.168.1.0/24
  FE80::/10
  ::1/128
 
 [file_manager]
 queue_gcode_uploads: True
 config_path: ~/klipper_config
+
+[history]
 
 [job_queue]
 load_on_startup: True
@@ -32,13 +35,32 @@ type: web
 repo: meteyou/mainsail
 path: ~/mainsail
 
+[notifier slack_start]
+url: slack://T03PTJ2L03T/B03T9MQ5GQL/vUeGOONAKsX8DZf7MESoKZks
+events: started
+body: Your printer started printing '{event_args[1].filename}'
+
+[notifier slack_complete]
+url: slack://T03PTJ2L03T/B03T9MQ5GQL/vUeGOONAKsX8DZf7MESoKZks
+events: complete
+body: Your printer completed printing '{event_args[1].filename}'
+attach: http://192.168.1.130/webcam/?action=snapshot
+
+[notifier slack_error]
+url: slack://T03PTJ2L03T/B03T9MQ5GQL/vUeGOONAKsX8DZf7MESoKZks
+events: error
+body: {event_args[1].message}
+attach: http://192.168.1.130/webcam/?action=snapshot
+
 [octoprint_compat]
 
 [power printer]
 type: tasmota
 locked_while_printing: true
 restart_klipper_when_powered: true
-restart_delay: 5
+restart_delay: 10
 address: 192.168.1.121
-on_when_upload_queued: True
+on_when_job_queued: True
 bound_service: klipper
+
+[include moonraker-obico-update.cfg]
